--- a/css/kamfu.css
+++ b/css/kamfu.css
@@ -38,8 +38,10 @@ body {
 
 #video1 {
     width: 100%;
+/*
     opacity: 0.4;
     filter: alpha(opacity=40);
+*/
 
     -moz-transform: scale(-1, 1);
     -webkit-transform: scale(-1, 1);
@@ -63,6 +65,7 @@ body {
     left:0px;
     width:100%;
     height:100%;
+    display:none;
 }
 
 #gameFront {
@@ -75,7 +78,7 @@ body {
 }
 
 
-#backImage {
+.invisible {
    display: none;
 }
 
