--- a/css/kamfu.css
+++ b/css/kamfu.css
@@ -2,6 +2,7 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: black;
 }
 
 #videoContainer {
@@ -38,6 +39,7 @@ body {
 
 #video1 {
     width: 100%;
+    height: 100%;
 /*
     opacity: 0.4;
     filter: alpha(opacity=40);
@@ -58,17 +60,8 @@ body {
 
 }
 
-#gameBackground {
-    background:#ffffff;
-    position:absolute;
-    top:0px;
-    left:0px;
-    width:100%;
-    height:100%;
-    display:none;
-}
 
-#gameFront {
+#gameFront, #gameForeground {
     background-color:transparent;
     position:absolute;
     top:0px;
