First ninja game playable demo

--- a/css/kamfu.css
+++ b/css/kamfu.css
@@ -61,7 +61,7 @@ body {
 }
 
 
-#gameFront, #gameForeground {
+#gameBack, #gameFront, #gameForeground {
     background-color:transparent;
     position:absolute;
     top:0px;
